--- a/HTML/ecuaciones1teorico.html
+++ b/HTML/ecuaciones1teorico.html
@@ -6,6 +6,7 @@
  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
+<div>
     <h1 id="T1">Ecuaciones de primer grado</h1>
     <p>Resolver una ecuación consiste en encontrar el valor que debe tomar la incógnita para que se cumpla la igualdad. Para lograrlo debemos aplicar propiedades matematicas y algebraicas. Podemos comprobar si la solución encontrada es correcta sustituyendo la incógnita por la solución. Como regla general, una ecuación de primer grado tiene una única solución.
     </p>
@@ -23,6 +24,7 @@
         <p>Remplazamos el valor de la incognita en la ecuacion original y verificamos:</p>
         <img src="../imagenes/E1/E1-7.png" height="126" width="126"/>
     </div>
+</div>
 </body>
 
 </html>
