--- a/HTML/principal.html
+++ b/HTML/principal.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
+<div>
     <h1 id="TITULOP">Ecuaciones y sistemas de ecuaciones</h1>
     <p>
         "Una ecuación es una igualdad matemática entre dos expresiones,
@@ -27,6 +28,7 @@
     <h3>Sistemas de ecuaciones:</h3>
     <button type="button"><a href="sistemasdeecuacionesteorico.html">TEORICO</a></button>
     <button type="button"><a href="calculadorasistemadeecuaciones.html" >RESOLVER ECUACIONES</a></button>
+</div>
 </div>
 </body>
 </html>
