--- a/HTML/ecuaciones2teorico.html
+++ b/HTML/ecuaciones2teorico.html
@@ -6,37 +6,39 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="T1">Ecuaciones de segundo grado</h1>
-    <h2>Como resolver ecuaciones de segundo grado completas</h2>
-    <p>Las ecuaciones de segundo grado completas o ecuaciones cuadráticas son las que se representan de la siguiente forma:
-    Donde a, b y c son las constantes de la ecuación:</p>
-    <img src="../imagenes/E2/img1.png" height="47" width="160"/>
-    <ul>
-        <li>a es el número que va siempre delante de x al cuadrado.</li>
-        <li>b es el número que va siempre delante de la x.</li>
-        <li>c es el número.</li>
-    </ul>
-    <p>
-    Es decir, las ecuaciones de segundo grado completas son las que tienen término con x elevada a 2, término con x elevada a 1 (o simplemente la x). Si faltara alguno de estos términos, estaríamos hablando de ecuaciones de segundo grado incompletas, que se resuelven con otro procedimiento distinto.
-    Al ser ecuaciones de segundo grado, tienen 2 soluciones. Las soluciones pueden se reales distintas, reales iguales, o complejas distintas (cuando las raices son imaginarias).
-    </p>
-    <p>El primer paso para resolver ecuaciones de segundo grado completas es identificar las constantes correctamente. Como hemos dicho antes, las constantes son los números que van delante de x al cuadrado, x y el término que no lleva x.
-    Vamos a verlo en un ejemplo:</p>
-    <img src="../imagenes/E2/img2.jpg" height="67" width="300"/><br>
-    En este caso, delante de x al cuadrado, no hay nada, por tanto a = 1.
-    Delante de x hay un 5, por lo que b=5.
-    Y el término que no lleva x es un 4, por lo que c=4.
-    Una vez identificadas las constantes, para resolver las ecuaciones de segundo grado completas hay que aplicar la siguiente fórmula:
-    </p>
-    <img src="../imagenes/E2/img3.png" height="54" width="223"/>
-    <p>Si falta algun temino lo tomamos como un 0 y estas ecuaciones pueden tener 2 resultados iguales, distintos o imaginarios.</p>
-
-    <h2>Ejemplos:</h2>
+<div>
+    <div>
+        <h1 id="T1">Ecuaciones de segundo grado</h1>
+        <h2>Como resolver ecuaciones de segundo grado completas</h2>
+        <p>Las ecuaciones de segundo grado completas o ecuaciones cuadráticas son las que se representan de la siguiente forma:
+            Donde a, b y c son las constantes de la ecuación:</p>
+        <img src="../imagenes/E2/img1.png" height="47" width="160"/>
+        <ul>
+            <li>a es el número que va siempre delante de x al cuadrado.</li>
+            <li>b es el número que va siempre delante de la x.</li>
+            <li>c es el número.</li>
+        </ul>
+        <p>Es decir, las ecuaciones de segundo grado completas son las que tienen término con x elevada a 2, término con x elevada a 1 (o simplemente la x). Si faltara alguno de estos términos, estaríamos hablando de ecuaciones de segundo grado incompletas, que se resuelven con otro procedimiento distinto.
+            Al ser ecuaciones de segundo grado, tienen 2 soluciones. Las soluciones pueden se reales distintas, reales iguales, o complejas distintas (cuando las raices son imaginarias).
+        </p>
+        <p>El primer paso para resolver ecuaciones de segundo grado completas es identificar las constantes correctamente. Como hemos dicho antes, las constantes son los números que van delante de x al cuadrado, x y el término que no lleva x.
+            Vamos a verlo en un ejemplo:</p>
+        <img src="../imagenes/E2/img2.jpg" height="67" width="300"/><br>
+        En este caso, delante de x al cuadrado, no hay nada, por tanto a = 1.
+        Delante de x hay un 5, por lo que b=5.
+        Y el término que no lleva x es un 4, por lo que c=4.
+        Una vez identificadas las constantes, para resolver las ecuaciones de segundo grado completas hay que aplicar la siguiente fórmula:
+        </p>
+        <img src="../imagenes/E2/img3.png" height="54" width="223"/>
+        <p>Si falta algun temino lo tomamos como un 0 y estas ecuaciones pueden tener 2 resultados iguales, distintos o imaginarios.</p>
+        <h2>Ejemplos:</h2>
+    </div>
     <div class="dist">
-    <img src="../imagenes/E2/Ej/raices distintas.png" height="270" width="180" align="left"/>
+        <img src="../imagenes/E2/Ej/raices distintas.png" height="270" width="180" align="left"/>
     </div>
     <div class="imagine">
-    <img src="../imagenes/E2/Ej/raices imaginarias.png" height="270" width="180" align="right">
+        <img src="../imagenes/E2/Ej/raices imaginarias.png" height="270" width="180" align="right">
     </div>
+</div>
 </body>
 </html>
