--- a/HTML/sistemasdeecuacionesteorico.html
+++ b/HTML/sistemasdeecuacionesteorico.html
@@ -6,35 +6,65 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 id="T1">Sistemas de Ecuaciones</h1>
-<p>Un sistema de ecuaciones lineales es un conjunto de ecuaciones (lineales) que tienen más de una incógnita.
+<div>
+    <h1 id="T1">Sistemas de Ecuaciones</h1>
+    <p>Un sistema de ecuaciones lineales es un conjunto de ecuaciones (lineales) que tienen más de una incógnita.
     Las incógnitas aparecen en varias de las ecuaciones, pero no necesariamente en todas. Lo que hacen estas ecuaciones es relacionar las incógnitas entre sí.
     Pero no siempre existe solución, o bien, pueden existir infinitas soluciones. Si hay una única solución se dice que el sistema es compatible determinado.
     Acontinuación explicaremos como resolver sistemas de ecuaciones con dos incognitas mediante el uso de los siguientes metodos:</p>
-<ul>
-    <li style="font-weight: bold">Metodo de sustitución</li>
-    <p>Consiste en despejar o aislar una de las incógnitas (X) y sustituir su expresión en la otra ecuación. De este modo, obtendremos una ecuación de primer grado con la otra incógnita, Y
-        .Una vez resuelta, calculamos el valor de X sustituyendo el valor de Y que ya conocemos.</p>
-    <p>Ejemplo:</p>
-    <img src="../imagenes/SE/MS/T1.png" height="46" width="113"/>
-    <ol>
-        <li>Despejamos la incognita de la primera ecuación</li>
-        <img src="../imagenes/SE/MS/T2.png" height="46" width="128"/>
-        <li>Remplazamos la incognita en la otra ecuación</li>
-        <img src="../imagenes/SE/MS/T3.png" height="74" width="212"/>
-        <li>Resolvemos la ecuación</li>
-        <img src="../imagenes/SE/MS/T4.png" height="124" width="164"/>
-        <li>Remplazamos el valor obtenido en la ecuacion del paso 1</li>
-        <img src="../imagenes/SE/MS/T6.png" height="70" width="143"/>
-        <p>La solución del sistema es:</p>
-        <img src="../imagenes/SE/MS/T7.png" height="45" width="60"/>
-    </ol>
-    <li style="font-weight: bold">Metodo de redución</li>
-    <p>Consiste en operar entre las ecuaciones como, por ejemplo, sumar o restar ambas ecuaciones, de modo que una de las incógnitas desaparezca. Así, obtenemos una ecuación con una sola incógnita.</p>
-    <p>Ejemplo:</p>
-    <li style="font-weight: bold">Metodo de igualación</li>
-    <p>Ejemplo:</p>
-    <p>Consiste en aislar en ambas ecuaciones la misma incógnita para poder igualar las expresiones, obteniendo así una ecuación con una sola incógnita.</p>
-</ul>
+    <div>
+        <ul>
+            <li style="font-weight: bold">Metodo de sustitución</li>
+            <p>Consiste en despejar o aislar una de las incógnitas (X) y sustituir su expresión en la otra ecuación. De este modo, obtendremos una ecuación de primer grado con la otra incógnita, Y
+                .Una vez resuelta, calculamos el valor de X sustituyendo el valor de Y que ya conocemos.</p>
+            <p>Ejemplo:</p>
+            <img src="../imagenes/SE/MS/T1.png" height="46" width="113"/>
+            <ol>
+                <li>Despejamos la incognita de la primera ecuación</li>
+                <img src="../imagenes/SE/MS/T2.png" height="46" width="128"/>
+                <li>Remplazamos la incognita en la otra ecuación</li>
+                <img src="../imagenes/SE/MS/T3.png" height="74" width="212"/>
+                <li>Resolvemos la ecuación</li>
+                <img src="../imagenes/SE/MS/T4.png" height="124" width="164"/>
+                <li>Remplazamos el valor obtenido en la ecuacion del paso 1</li>
+                <img src="../imagenes/SE/MS/T6.png" height="70" width="143"/>
+                <p>La solución del sistema es:</p>
+                <img src="../imagenes/SE/MS/T7.png" height="45" width="60"/>
+            </ol>
+            <li style="font-weight: bold">Metodo de redución</li>
+            <p>Consiste en operar entre las ecuaciones como, por ejemplo, sumar o restar ambas ecuaciones, de modo que una de las incógnitas desaparezca. Así, obtenemos una ecuación con una sola incógnita.</p>
+            <p>Ejemplo:</p>
+            <img src="../imagenes/SE/MR/T8.png" height="46" width="126"/>
+            <ol>
+                <li>Comprobamos los coeficientes:</li>
+
+                <li>Sumamos o restamos las ecuaciones</li>
+                <img src="../imagenes/SE/MR/T9.png" height="80" width="145"/>
+                <li>Resolvemos la ecuacion obtenida</li>
+                <img src="../imagenes/SE/MR/T10.png" height="93" width="102"/>
+                <li>Remplazamos el valor y calculamos la otra incognita</li>
+                <img src="../imagenes/SE/MR/T11.png" height="101" width="115"/>
+                <p>La solucion del sistema es:</p>
+                <img src="../imagenes/SE/MR/T12.png" height="45" width="62"/>
+            </ol>
+            <li style="font-weight: bold">Metodo de igualación</li>
+            <p>Consiste en aislar en ambas ecuaciones la misma incógnita para poder igualar las expresiones, obteniendo así una ecuación con una sola incógnita.</p>
+            <p>Ejemplo:</p>
+            <img src="../imagenes/SE/MI/T13.png" height="47" width="129"/>
+            <ol>
+                <li>Aislamos una incognita en las dos ecuaciones:</li>
+                <img src="../imagenes/SE/MI/T14.png" height="121" width="151"/>
+                <li>Igualamos las expreciones:</li>
+                <img src="../imagenes/SE/MI/T15.png" height="20" width="158"/>
+                <li>Resolvemoa la ecuacion:</li>
+                <img src="../imagenes/SE/MI/T16.png" height="159" width="197"/>
+                <li>Remplazamos el valor y calculamos la otra incognita</li>
+                <img src="../imagenes/SE/MI/T17.png" height="71" width="115"/>
+                <li>La solucion del sistema es:</li>
+                <img src="../imagenes/SE/MI/T18.png" height="45" width="78"/>
+            </ol>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
