--- a/HTML/calculadoraecuaciones1grado.html
+++ b/HTML/calculadoraecuaciones1grado.html
@@ -13,7 +13,7 @@
 
 <input type="number" name="valor de c">=0
 </div>
-
+<canvas id="primergrado" width="200" height="100" ></canvas>
 
 </body>
 </html>
