--- a/HTML/calculadoraecuaciones1grado.html
+++ b/HTML/calculadoraecuaciones1grado.html
@@ -7,13 +7,19 @@
 </head>
 <body>
 <h1 id="T1">Calculadora de ecuaciones de segundo grado</h1>
-<div id="tipo1><header >Forma 1</header>
+<p>Forma a remplazar: aX+b=cX+d</p>
 
-<input type="number" name="valor de b">x+
-
-<input type="number" name="valor de c">=0
+<div >
+    Valor de a(X)=<input type="number" id="num1" name="num1">
+    Valor de b=<input type="number" id="num2" name="num2">
+    Valor de c(X)=<input type="number" id="num3" name="num3">
+    Valor de d=<input type="number" id="num4" name="num4"><br>
 </div>
-<canvas id="primergrado" width="200" height="100" ></canvas>
+<input type="button" value="resolver" onclick="resolver1()">
+<script  type="text/javascript" src="../javascript/ECU1.js">
+</script>
+
+
 
 </body>
 </html>
