--- a/HTML/calculadorasistemadeecuaciones.html
+++ b/HTML/calculadorasistemadeecuaciones.html
@@ -8,13 +8,11 @@
 <body>
 <h1 id="T1">Calculadora de sistemas de ecuaciones</h1>
 <div>
-    <script>
-    var gui = require('nw.gui')
-    var nwin = gui.Window.get()
-    window.onload = function() {
-        nwin.show()
-        nwin.maximize()}
-    </script>
+    <div>
+        <h3>Sistemas de ecuaciones:</h3>
+        <button type="button"><a href="sistemas%203x3.html">ecuaciones 2x2 o 3x3</a></button>
+        <button type="button"><a href="sistemas5x5.html" >ecuaciones4x4 o 5x5</a></button>
+    </div>
 </div>
 </body>
 </html>
