--- a/HTML/calculadoraecuaciones2grado.html
+++ b/HTML/calculadoraecuaciones2grado.html
@@ -13,10 +13,11 @@
 <div >
     Valor de a(X*X)=<input type="number" id="num1" name="num1">
     Valor de b(X)=<input type="number" id="num2" name="num2">
-    Valor de c=<input type="number" id="num3" name="num3"><br>
+    Valor de c=<input type="number" id="num3" name="num3">
 </div>
-<input type="button" value="resolver" onclick="resolver()">
+<input type="button" value="Resolver" onclick="resolver()">
 <script  type="text/javascript" src="../javascript/ECU2.js">
+
 </script>
 
 </body>
