--- a/HTML/calculadoraecuaciones1grado.html
+++ b/HTML/calculadoraecuaciones1grado.html
@@ -15,7 +15,7 @@
     Valor de c(X)=<input type="number" id="num3" name="num3">
     Valor de d=<input type="number" id="num4" name="num4"><br>
 </div>
-<input type="button" value="resolver" onclick="resolver1()">
+<input type="button" value="Resolver" onclick="resolver1()">
 <script  type="text/javascript" src="../javascript/ECU1.js">
 </script>
 
