--- a/HTML/calculadorasistemadeecuaciones.html
+++ b/HTML/calculadorasistemadeecuaciones.html
@@ -10,8 +10,8 @@
 <div>
     <div>
         <h3>Sistemas de ecuaciones:</h3>
-        <button type="button"><a href="sistemas%203x3.html">ecuaciones 2x2 o 3x3</a></button>
-        <button type="button"><a href="sistemas5x5.html" >ecuaciones4x4 o 5x5</a></button>
+        <button type="button"><a href="Sistemas3x3.html">ecuaciones 2x2 o 3x3</a></button>
+        <button type="button"><a href="Sistemas5x5.html" >ecuaciones4x4 o 5x5</a></button>
     </div>
 </div>
 </body>
