--- a/HTML/sistemas 3x3.html
+++ b/HTML/sistemas 3x3.html
@@ -4,12 +4,106 @@
     <title>Sistemas de Ecuaciones 3x3</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../estilo.css" type="text/css">
+    <script type="text/javascript" src="../javascript/3x3.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+
+
 </head>
 <body>
+
 <div>
     <h1 id="T1">Sistemas de Ecuaciones 3x3</h1>
 
 </div>
-</body>
+<form name="sist0">
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"><BR>
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"><BR>
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3">
+
+    <input type="button" value="Gauss" onClick="gauss()">
+
+</form><br>
+
+<form name="sist1">
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"><BR>
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"><BR>
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"> <BR><BR>
+
+</form>
+
+<form name="sist2">
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"><BR>
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3"><BR>
+
+    <input type="text" size="3">x+
+
+    <input type="text" size="3">y+
+
+    <input type="text" size="3">z=
+
+    <input type="text" size="3">
+
+    <input type="button" value="Resolver" onClick="res()">
+
+</form>
+
+<</body>>
+
 </html>
