--- a/HTML/sistemas 3x3.html
+++ b/HTML/sistemas 3x3.html
@@ -17,23 +17,25 @@
 
 </div>
 <form name="sist0">
+    <div>
+        <input type="text" size="3">x+
 
-    <input type="text" size="3">x+
+        <input type="text" size="3">y+
 
-    <input type="text" size="3">y+
+        <input type="text" size="3">z=
 
-    <input type="text" size="3">z=
+        <input type="text" size="3">
+    </div>
+    <div>
+        <input type="text" size="3">x+
 
-    <input type="text" size="3"><BR>
+        <input type="text" size="3">y+
 
-    <input type="text" size="3">x+
+        <input type="text" size="3">z=
 
-    <input type="text" size="3">y+
-
-    <input type="text" size="3">z=
-
-    <input type="text" size="3"><BR>
-
+        <input type="text" size="3">
+    </div>
+    <div>
     <input type="text" size="3">x+
 
     <input type="text" size="3">y+
@@ -41,69 +43,77 @@
     <input type="text" size="3">z=
 
     <input type="text" size="3">
-
+    </div>
     <input type="button" value="Gauss" onClick="gauss()">
 
-</form><br>
-
-<form name="sist1">
-
-    <input type="text" size="3">x+
-
-    <input type="text" size="3">y+
-
-    <input type="text" size="3">z=
-
-    <input type="text" size="3"><BR>
-
-    <input type="text" size="3">x+
-
-    <input type="text" size="3">y+
-
-    <input type="text" size="3">z=
-
-    <input type="text" size="3"><BR>
-
-    <input type="text" size="3">x+
-
-    <input type="text" size="3">y+
-
-    <input type="text" size="3">z=
-
-    <input type="text" size="3"> <BR><BR>
 
 </form>
+<div>
+    <form name="sist1">
+        <div>
+            <input type="text" size="3">x+
 
-<form name="sist2">
+            <input type="text" size="3">y+
 
-    <input type="text" size="3">x+
+            <input type="text" size="3">z=
 
-    <input type="text" size="3">y+
+            <input type="text" size="3">
+        </div>
+        <div>
+            <input type="text" size="3">x+
 
-    <input type="text" size="3">z=
+            <input type="text" size="3">y+
 
-    <input type="text" size="3"><BR>
+            <input type="text" size="3">z=
 
-    <input type="text" size="3">x+
+            <input type="text" size="3">
+        </div>
+        <div>
+            <input type="text" size="3">x+
 
-    <input type="text" size="3">y+
+            <input type="text" size="3">y+
 
-    <input type="text" size="3">z=
+            <input type="text" size="3">z=
 
-    <input type="text" size="3"><BR>
+            <input type="text" size="3">
+        </div>
 
-    <input type="text" size="3">x+
+    </form>
+</div>
 
-    <input type="text" size="3">y+
+<div>
+    <form name="sist2">
+        <div>
+            <input type="text" size="3">x+
 
-    <input type="text" size="3">z=
+            <input type="text" size="3">y+
 
-    <input type="text" size="3">
+            <input type="text" size="3">z=
 
-    <input type="button" value="Resolver" onClick="res()">
+            <input type="text" size="3">
+        </div>
+        <div>
+            <input type="text" size="3">x+
+
+            <input type="text" size="3">y+
+
+            <input type="text" size="3">z=
+
+            <input type="text" size="3">
+        </div>
+        <div>
+        <input type="text" size="3">x+
+
+        <input type="text" size="3">y+
+
+        <input type="text" size="3">z=
+
+        <input type="text" size="3">
+        </div>
+        <input type="button" value="Resolver" onClick="res()">
 
 </form>
-
-<</body>>
+</div>
+</body>
 
 </html>
