--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
     <div>
         <h3>Sistemas de ecuaciones:</h3>
         <button type="button"><a href="sistemasdeecuacionesteorico.html">TEORICO</a></button>
-        <button type="button"><a href="calculadorasistemadeecuaciones.html" >RESOLVER ECUACIONES</a></button>
+        <button type="button"><a href="sistemas%203x3.html" >RESOLVER ECUACIONES</a></button>
     </div>
 </div>
 </div>
