--- a/HTML/calculadoraecuaciones1grado.html
+++ b/HTML/calculadoraecuaciones1grado.html
@@ -18,7 +18,9 @@
 <input type="button" value="Resolver" onclick="resolver1()">
 <script  type="text/javascript" src="../javascript/ECU1.js">
 </script>
-
+<div>
+    <button type="button"><a href="index.html">Volver pag principal</a></button>
+</div>
 
 
 </body>
