--- a/HTML/calculadoraecuaciones2grado.html
+++ b/HTML/calculadoraecuaciones2grado.html
@@ -19,6 +19,8 @@
 <script  type="text/javascript" src="../javascript/ECU2.js">
 
 </script>
-
+<div>
+    <button type="button"><a href="index.html">Volver pag principal</a></button>
+</div>
 </body>
 </html>
