--- a/HTML/ecuaciones1teorico.html
+++ b/HTML/ecuaciones1teorico.html
@@ -24,6 +24,11 @@
         <p>Remplazamos el valor de la incognita en la ecuacion original y verificamos:</p>
         <img src="../imagenes/E1/E1-7.png" height="126" width="126"/>
     </div>
+    <div>
+        <button type="button"><a href="index.html">Volver pag principal</a></button>
+        <button type="button"><a href="calculadoraecuaciones1grado.html">RESOLVER ECUACIONES</a></button>
+    </div>
+
 </div>
 </body>
 
