--- a/HTML/ecuaciones2teorico.html
+++ b/HTML/ecuaciones2teorico.html
@@ -40,5 +40,7 @@
         <img src="../imagenes/E2/Ej/raices imaginarias.png" height="270" width="180" align="right">
     </div>
 </div>
+<button type="button"><a href="index.html">Volver pag principal</a></button>
+<button type="button"><a href="calculadoraecuaciones2grado.html">RESOLVER ECUACIONES</a></button>
 </body>
 </html>
