--- a/HTML/sistemasdeecuacionesteorico.html
+++ b/HTML/sistemasdeecuacionesteorico.html
@@ -65,6 +65,10 @@
             </ol>
         </ul>
     </div>
+    <div>
+        <button type="button"><a href="index.html">Volver pag principal</a></button>
+        <button type="button"><a href="sistemas%203x3.html" >RESOLVER ECUACIONES</a></button>
+    </div>
 </div>
 </body>
 </html>
