eliminado inline style

--- a/HTML/sistemasdeecuacionesteorico.html
+++ b/HTML/sistemasdeecuacionesteorico.html
@@ -14,7 +14,7 @@
     Acontinuación explicaremos como resolver sistemas de ecuaciones con dos incognitas mediante el uso de los siguientes metodos:</p>
     <div>
         <ul>
-            <li style="font-weight: bold">Metodo de sustitución</li>
+            <li class="tm">Metodo de sustitución</li>
             <p>Consiste en despejar o aislar una de las incógnitas (X) y sustituir su expresión en la otra ecuación. De este modo, obtendremos una ecuación de primer grado con la otra incógnita, Y
                 .Una vez resuelta, calculamos el valor de X sustituyendo el valor de Y que ya conocemos.</p>
             <p>Ejemplo:</p>
@@ -31,7 +31,7 @@
                 <p>La solución del sistema es:</p>
                 <img src="../imagenes/SE/MS/T7.png" height="45" width="60"/>
             </ol>
-            <li style="font-weight: bold">Metodo de redución</li>
+            <li class="tm">Metodo de redución</li>
             <p>Consiste en operar entre las ecuaciones como, por ejemplo, sumar o restar ambas ecuaciones, de modo que una de las incógnitas desaparezca. Así, obtenemos una ecuación con una sola incógnita.</p>
             <p>Ejemplo:</p>
             <img src="../imagenes/SE/MR/T8.png" height="46" width="126"/>
@@ -47,7 +47,7 @@
                 <p>La solucion del sistema es:</p>
                 <img src="../imagenes/SE/MR/T12.png" height="45" width="62"/>
             </ol>
-            <li style="font-weight: bold">Metodo de igualación</li>
+            <li class="tm">Metodo de igualación</li>
             <p>Consiste en aislar en ambas ecuaciones la misma incógnita para poder igualar las expresiones, obteniendo así una ecuación con una sola incógnita.</p>
             <p>Ejemplo:</p>
             <img src="../imagenes/SE/MI/T13.png" height="47" width="129"/>
