--- a/HTML/calculadoraecuaciones1grado.html
+++ b/HTML/calculadoraecuaciones1grado.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 id="T1">Calculadora de ecuaciones de segundo grado</h1>
+<h1 id="T1">Calculadora de ecuaciones de primer grado</h1>
 <p>Forma a remplazar: aX+b=cX+d</p>
 
 <div >
